--- a/demo.slim
+++ b/demo.slim
@@ -1,10 +1,9 @@
 doctype html
 html
   head
-    meta
-    script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"
-    script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"
-    script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"
+    script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"
+    script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"
+    script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"
 
     script src="backbone.metricmanager.js"
     script src="ExampleView.js"
@@ -29,7 +28,7 @@ html
   body
     span Click the buttons to trigger the events using the metric manager
     br
-    span This demo supplies callbacks to show that the events get registered.
+    span This demo supplies callbacks to Mixpanel and GA to show that the events get registered.
     br
     br
     .example
